antsurance/force-app/main/default/objects/Policy_Participant__c/Policy_Participant__c.object-meta.xml
<CustomObject>
    <description>A person with a role on a policy, such as the named insured, a rated driver or a lienholder contact. For drivers it holds the license, rating and three-year driving record that the premium is rated on. Adding a driver to an auto policy adds a participant.</description>
    <label>Policy Participant</label>
    <nameField>
        <label>Participant</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>