antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Accidents_Past_3_Years__c.field-meta.xml
<CustomField>
    <fullName>Accidents_Past_3_Years__c</fullName>
    <description>At-fault accidents in the past three years.</description>
    <label>At-Fault Accidents (3 Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>