antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The person holding this role.</description>
    <label>Person</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policy Roles</relationshipLabel>
    <relationshipName>Policy_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>