antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Date_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Date_Licensed__c</fullName>
    <description>When the driver was first licensed.</description>
    <label>Date Licensed</label>
    <type>Date</type>
</CustomField>