antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Driver_Rating__c.field-meta.xml
<CustomField>
    <fullName>Driver_Rating__c</fullName>
    <description>The rating tier this driver falls in, which drives the auto premium.</description>
    <label>Driver Rating</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>Inexperienced Operator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>