antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>When this person came off the policy, if they have.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>