antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Good_Student_Discount__c.field-meta.xml
<CustomField>
    <fullName>Good_Student_Discount__c</fullName>
    <description>A young driver with qualifying grades, which earns a discount.</description>
    <label>Good Student Discount</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>