antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <description>The primary person in this role, for example the first named insured.</description>
    <label>Primary</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>