antsurance/force-app/main/default/objects/Policy_Participant__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>Driver license number. Drivers only.</description>
    <label>License Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>