antsurance/force-app/main/default/objects/Policy_Participant__c/fields/License_State__c.field-meta.xml
<CustomField>
    <fullName>License_State__c</fullName>
    <description>Two-letter state that issued the license.</description>
    <label>License State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>