antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Anything underwriting or service should know about this person on this policy. Markdown is rendered on the record page.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>