antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Primary_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vehicle__c</fullName>
    <description>The vehicle this driver mainly drives.</description>
    <label>Primary Vehicle</label>
    <length>120</length>
    <type>Text</type>
</CustomField>