antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Relationship_to_Insured__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Insured__c</fullName>
    <description>How this person is related to the named insured.</description>
    <label>Relationship</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse or Partner</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Other Relative</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>