antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>What this person is on the policy.</description>
    <label>Role</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named Insured</fullName>
            </value>
            <value>
                <fullName>Additional Insured</fullName>
            </value>
            <value>
                <fullName>Policy Contact</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Excluded Driver</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Lienholder</fullName>
            </value>
            <value>
                <fullName>Certificate Holder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>