antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Violations_Past_3_Years__c.field-meta.xml
<CustomField>
    <fullName>Violations_Past_3_Years__c</fullName>
    <description>Moving violations on the driving record in the past three years.</description>
    <label>Violations (3 Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>