antsurance/force-app/main/default/objects/Policy_Participant__c/fields/Years_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Years_Licensed__c</fullName>
    <description>Whole years since the driver was first licensed.</description>
    <label>Years Licensed</label>
    <formula><![CDATA[IF(ISBLANK(Date_Licensed__c), NULL, FLOOR((TODAY() - Date_Licensed__c) / 365.25))]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>